--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -28,7 +28,7 @@ button {
 </style>
 
 <div class="jumbotron">
-    <img src="/static/img/gettysg.jpg" style="width: 120px; float: left;">
+    <img src="/static/img/unnamed.png" style="width: 300px; float: left;">
 
     <p class="h1 text-center" style = "padding: 10px; font-weight: bold;"> Sunderman Conservatory of Music</p>
     <p class = "h1 text-center" style = "font-weight: bold;"> Theory Placement Assessment</p>
