--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -35,9 +35,14 @@ button {
 </div>
 
 
+<div class="progress" style="height: 40px;">
+    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0% of questions answered</div>
+  </div>
 
 <p class = "text-right" style = "float: right;">Time Started: <span id="datetime"></span></p>
 <p class = "text-left" style = "background-color: #eeeeee;"> Time left: <span id="timeleft"></span></p>
+<button type="button" class="btn btn-primary" id="skip">Skip to next unanswered question</button>
+
 <div class="container">
     <form id="friend-form">
         <div class="row">
@@ -98,7 +103,7 @@ button {
         <p></p>
         <p><select id="question-number"></select></p>
         <button type="button" class="btn btn-primary" id="save-work" style="display:none">save your work</button>
-        <div type="button" class="btn btn-primary" id="submit-exam" onclick="complete()">Complete the exam</button>
+        <div type="button" class="btn btn-primary" id="submit-exam" onclick="complete()">Complete the assessment</button>
   
     </div>
 </div>
@@ -385,6 +390,12 @@ const all_accidentals = ['b', '#', '']
 
                 function createPitch(octaves = [4,5], question_type = "", question_number) {
                     let pitch = all_pitches[Math.floor(Math.random() * all_pitches.length)];
+                    if (exam[question_number-1]) {
+                        if (pitch == exam[question_number-1].given_pitch) {
+                            var index = all_pitches.indexOf(pitch);
+                            pitch = all_pitches[index - 1];
+                        }
+                    };
                     let octave = octaves[Math.floor(Math.random() * octaves.length)];
                     let accidental = all_accidentals[Math.floor(Math.random() * all_accidentals.length)];
                     let question = {
@@ -453,13 +464,7 @@ const all_accidentals = ['b', '#', '']
                 let time_left = Math.max (0, Math.round((end_date_time - new Date) / 60000));
                
                 $('#timeleft').text(time_left + " Minutes");
-                setInterval(function() {
-                    time_left = Math.max (0, Math.round((end_date_time - new Date) / 60000));
-                    $('#timeleft').text(time_left + " Minutes");
-                    if (time_left == 0) {
-                        $('#submit-exam').html('Thank you for taking this placement assessment<br> This exam has expired and changes will no longer be saved');
-                    }
-                }, 1000);
+
 
 
                 total_number_of_questions = Object.keys(exam).length - 1; /* the last question is actually where we hold the time started and time to close the exam */
@@ -518,9 +523,48 @@ const all_accidentals = ['b', '#', '']
                     }
                 });
 
+
                 exam[question_number] = show_question (exam[question_number]);
 
                 /* Listener for PREVIOUS question */
+                setInterval(function() {
+                    time_left = Math.max (0, Math.round((end_date_time - new Date) / 60000));
+                    $('#timeleft').text(time_left + " Minutes");
+                    if (time_left == 0) {
+                        $('#submit-exam').html('Thank you for taking this placement assessment<br> This exam has expired and changes will no longer be saved');
+                    }
+
+                    let total_answered_already = 0;
+                    for (i = 1; i < total_number_of_questions; i ++){
+                        if (exam[i].answer_pitch || exam[i].answer_rhythm) {
+                            total_answered_already +=1;
+                        }
+                    }
+                    let percentage_done = (100*(total_answered_already/total_number_of_questions)).toFixed(0);
+                    console.log (percentage_done);
+                    $('.progress-bar').css('width', percentage_done + '%').attr('aria-valuenow', percentage_done).text(percentage_done + "% of questions answered");
+                }, 1000);
+
+                $('#skip').click (function (){
+                    if (question_number == total_number_of_questions - 1) {
+                        start = 1;
+                    }
+                    else {
+                        start = question_number + 1;
+
+                    }
+                    for (i = start; i < total_number_of_questions; i ++){
+                        if (!exam[i].answer_pitch && !exam[i].answer_rhythm) {
+                            document.getElementById('question_title').innerHTML = "Question " + i.toString();
+                            var pagebutton= document.getElementById("save-work");
+                            pagebutton.click();
+                            question_number = i;
+                            exam[i] = show_question(exam[i]);
+                            document.getElementById("question-number").value = question_number.toString();
+                            return;
+                        }
+                    }
+                });
 
                 document.getElementById("previous").addEventListener("click", function(){
                 
