--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -541,7 +541,7 @@ const all_accidentals = ['b', '#', '']
                             total_answered_already +=1;
                         }
                     }
-                    let percentage_done = (100*(total_answered_already/total_number_of_questions)).toFixed(0);
+                    let percentage_done = (100*(total_answered_already/total_number_of_questions - 1)).toFixed(0);
                     console.log (percentage_done);
                     $('.progress-bar').css('width', percentage_done + '%').attr('aria-valuenow', percentage_done).text(percentage_done + "% of questions answered");
                 }, 5000);
@@ -731,7 +731,7 @@ const all_accidentals = ['b', '#', '']
             document.getElementById("question_prompt").innerHTML = question.question_type.slice(6) + " Clef: Write the note <strong>" + (question.given_pitch.toUpperCase() + question.given_accidental) + "</strong> by clicking <strong>in</strong> the staff";
         }
         else if (question.question_type == "Insert_Barlines") {
-            document.getElementById("question_prompt").innerHTML = "Add barlines to the following rhythm. Click on a note to add a barline after it. Click again to remove the barline.";
+            document.getElementById("question_prompt").innerHTML = "Add barlines to the following rhythm. Click on a note or rest to add a barline after it. Click again to remove the barline. <br> Make sure to add a barline at the end of each line.";
         }
 
         input.type = "text";
