--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -35,13 +35,14 @@ button {
 </div>
 
 
-<div class="progress" style="height: 40px;">
-    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0% of questions answered</div>
+<div class="progress bg-success" style="height: 40px;  font-weight: bold;">
+    <div class="progress-bar " role="progressbar" style="width: 0%;  padding-left: 10px;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0% of questions answered</div>
   </div>
 
-<p class = "text-right" style = "float: right;">Time Started: <span id="datetime"></span></p>
-<p class = "text-left" style = "background-color: #eeeeee;"> Time left: <span id="timeleft"></span></p>
-<button type="button" class="btn btn-primary" id="skip">Skip to next unanswered question</button>
+<p class = "text-right" style = "float: right; font-weight: bold">Time Started: <span id="datetime"></span></p>
+<p class = "text-left" style = "background-color: #eeeeee; font-weight: bold;"> Time left: <span id="timeleft"></span></p>
+<button type="button" class="btn btn-primary" id="skip" style="display:none">Skip to next unanswered question</button>
+<button type="button" class="btn btn-primary" id="first_unanswered" style="display:none">Skip to earliest unanswered question</button>
 
 <div class="container">
     <form id="friend-form">
@@ -149,6 +150,9 @@ const all_accidentals = ['b', '#', '']
 // get the slate id provided in the url
         let params = new URLSearchParams(location.search);
         let user_id = params.get('slateid');
+        if (!user_id) {
+            window.location.href = "https://www.gettysburg.edu/academic-programs/sunderman-conservatory/";
+        };
         // console.log(user_id);
         slate_id_input = document.getElementById("id_slate_id")
         slate_id_input.value = user_id; 
@@ -456,6 +460,17 @@ const all_accidentals = ['b', '#', '']
                 if ($("#exam").length) {
                     $('#exam').show();
                 }
+
+                if ($("#skip").length) {
+                    $('#skip').show();
+                }
+
+                if ($("#first_unanswered").length) {
+                    $('#first_unanswered').show();
+                }
+
+                
+
                 // console.log(exam[exam.length -1].start_date_time);
 
                 let start_date_time = new Date();
@@ -541,10 +556,12 @@ const all_accidentals = ['b', '#', '']
                             total_answered_already +=1;
                         }
                     }
-                    let percentage_done = (100*(total_answered_already/total_number_of_questions - 1)).toFixed(0);
+                    let percentage_done = (100*(total_answered_already/(total_number_of_questions - 1))).toFixed(0);
                     console.log (percentage_done);
                     $('.progress-bar').css('width', percentage_done + '%').attr('aria-valuenow', percentage_done).text(percentage_done + "% of questions answered");
-                }, 5000);
+                }, 1000);
+
+                
 
                 $('#skip').click (function (){
                     if (question_number == total_number_of_questions - 1) {
@@ -552,8 +569,22 @@ const all_accidentals = ['b', '#', '']
                     }
                     else {
                         start = question_number + 1;
-
                     }
+                    for (i = start; i < total_number_of_questions; i ++){
+                        if (!exam[i].answer_pitch && !exam[i].answer_rhythm) {
+                            document.getElementById('question_title').innerHTML = "Question " + i.toString();
+                            var pagebutton= document.getElementById("save-work");
+                            pagebutton.click();
+                            question_number = i;
+                            exam[i] = show_question(exam[i]);
+                            document.getElementById("question-number").value = question_number.toString();
+                            return;
+                        }
+                    }
+                });
+
+                $('#first_unanswered').click (function (){
+                    let start = 1;
                     for (i = start; i < total_number_of_questions; i ++){
                         if (!exam[i].answer_pitch && !exam[i].answer_rhythm) {
                             document.getElementById('question_title').innerHTML = "Question " + i.toString();
