Changed answered to attempted

--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -36,7 +36,7 @@ button {
 
 
 <div class="progress bg-success" style="height: 40px;  font-weight: bold;">
-    <div class="progress-bar " role="progressbar" style="width: 0%;  padding-left: 10px;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0% of questions answered</div>
+    <div class="progress-bar " role="progressbar" style="width: 0%;  padding-left: 10px;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0% of questions attempted</div>
   </div>
 
 <p class = "text-right" style = "float: right; font-weight: bold">Time Started: <span id="datetime"></span></p>
