--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -64,7 +64,7 @@ button {
             <ul class="list-group">
                 <li class="list-group-item intro-text h5">Thank you for taking this assessment.</li>
                 <li class="list-group-item intro-text h5">Please answer as many questions as you can, and try not to leave any questions blank.</li>
-                <li class="list-group-item intro-text h5">We recommend taking this assessment on Chrome or Safari on a personal computer.</li>
+                <li class="list-group-item intro-text h5">We recommend taking this assessment on Chrome, Safari, or Firefox on a personal computer.</li>
                 <li class="list-group-item intro-text h5">If you are using a mobile device, please turn it to landscape orientation.</li>
                 <li class="list-group-item intro-text h5">Do not consult any reference materials, and complete the assessment on your own.</li>
                 <li class="list-group-item intro-text h5">Please enter your first and last name, and click the "start assessment" button. </li>
