--- a/apps/my_app/templates/index.html
+++ b/apps/my_app/templates/index.html
@@ -36,7 +36,7 @@ button {
 
 
 <div class="progress bg-success" style="height: 60px;  font-weight: bold; font-size: 16px;">
-    <div class="progress-bar " role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">&nbsp; You have attempted 0% of the questions on this assessment</div>
+    <div class="progress-bar " role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"> &nbsp;You have attempted 0% of the questions on this assessment</div>
   </div>
 
 <p class = "text-right" style = "float: right; font-weight: bold">Time Started: <span id="datetime"></span></p>
@@ -572,7 +572,7 @@ const all_accidentals = ['b', '#', '']
                     }
                     let percentage_done = (100*(total_answered_already/(total_number_of_questions - 1))).toFixed(0);
                     console.log (percentage_done);
-                    $('.progress-bar').css('width', percentage_done + '%').attr('aria-valuenow', percentage_done).text("You have attempted " + percentage_done + "% of the questions on this assessment");
+                    $('.progress-bar').css('width', percentage_done + '%').attr('aria-valuenow', percentage_done).html("&nbsp; You have attempted " + percentage_done + "% of the questions on this assessment");
                 }, 1000);
 
                 
